--- a/global_vars.toml
+++ b/global_vars.toml
@@ -11,10 +11,10 @@ name = "aSZombienatorCr"
 size = 0x1f
 
 [0x3008]
-last_change = 2023-12-11T18:27:38.840572Z
+last_change = 2023-12-11T18:40:43.089226Z
 addr = 0x3008
-name = "s"
-size = 0x53
+name = "file"
+size = 0x6
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
