--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:42.987551Z
-last_push_artifact = 0x3a4
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-11T18:40:43.005054Z
+last_push_artifact = "Elf64_Rela"
+last_push_artifact_type = "struct"
