--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,6 +16,12 @@ addr = 0x3008
 name = "s"
 size = 0x53
 
+[0x300e]
+last_change = 2023-12-11T18:40:43.263468Z
+addr = 0x300e
+name = "aPayloadSize"
+size = 0xf
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
