--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:43.263468Z
-last_push_artifact = 0x300e
+last_push_time = 2023-12-11T18:40:43.281209Z
+last_push_artifact = 0x2568
 last_push_artifact_type = "global variable"
