--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:43.161123Z
-last_push_artifact = "Elf64_Vernaux"
+last_push_time = 2023-12-11T18:40:43.178931Z
+last_push_artifact = "Elf64_Verneed"
 last_push_artifact_type = "struct"
