--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,6 +22,12 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
+[0x4f78]
+last_change = 2023-12-11T18:40:43.352381Z
+addr = 0x4f78
+name = "putchar_ptr"
+size = 0x8
+
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
