--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,8 +1,8 @@
-[0x5e4]
-last_change = 2023-12-12T19:30:04.878961Z
-addr = 0x5e4
-name = "aErrnoLocation"
-size = 0x11
+[0x649]
+last_change = 2023-12-12T19:30:04.899562Z
+addr = 0x649
+name = "aItmDeregistert"
+size = 0x1c
 
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
