--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
-[0x3b0]
-last_change = 2023-12-12T19:30:04.933674Z
-addr = 0x3b0
-name = "elf_gnu_hash_indexes"
-size = 0x8
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x10f0]
+last_change = 2023-12-12T19:30:04.950102Z
+addr = 0x10f0
+name = ".putchar"
+size = 0x1
 
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
