--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:04.709200Z
-last_push_artifact = 0x318
+last_push_time = 2023-12-12T19:30:04.727548Z
+last_push_artifact = 0x20b0
 last_push_artifact_type = "global variable"
