--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:04.812569Z
-last_push_artifact = 0x5b7
+last_push_time = 2023-12-12T19:30:04.828922Z
+last_push_artifact = 0x3a0
 last_push_artifact_type = "global variable"
