--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x5b7]
+last_change = 2023-12-12T19:30:04.812569Z
+addr = 0x5b7
+name = "aPuts"
+size = 0x5
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -27,12 +33,6 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x5038]
-last_change = 2023-12-12T19:30:04.795616Z
-addr = 0x5038
-name = "buf"
-size = 0x8
 
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
