--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x5bc]
-last_change = 2023-12-12T19:30:04.965923Z
-addr = 0x5bc
-name = "aPutchar"
-size = 0x8
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -37,5 +31,11 @@ size = 0x1
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
+name = "__errno_location"
+size = 0x1
+
+[0x5048]
+last_change = 2023-12-12T19:30:04.982160Z
+addr = 0x5048
 name = "__errno_location"
 size = 0x1
