--- a/global_vars.toml
+++ b/global_vars.toml
@@ -11,10 +11,10 @@ name = "aSZombienatorCr"
 size = 0x1f
 
 [0x3008]
-last_change = 2023-12-12T19:30:04.776466Z
+last_change = 2023-12-11T18:27:38.840572Z
 addr = 0x3008
-name = "file"
-size = 0x8
+name = "s"
+size = 0x53
 
 [0x3082]
 last_change = 2023-12-11T18:40:43.369511Z
@@ -27,6 +27,12 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
+
+[0x5038]
+last_change = 2023-12-12T19:30:04.795616Z
+addr = 0x5038
+name = "buf"
+size = 0x8
 
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
