--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,6 +4,12 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
+[0x11a0]
+last_change = 2023-12-12T19:30:04.584743Z
+addr = 0x11a0
+name = "start"
+size = 0x1
+
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -26,12 +32,6 @@ size = 0x9
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5020]
-last_change = 2023-12-12T19:30:04.559817Z
-addr = 0x5020
-name = "stdin"
 size = 0x1
 
 [0x5040]
