--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x5e4]
+last_change = 2023-12-12T19:30:04.878961Z
+addr = 0x5e4
+name = "aErrnoLocation"
+size = 0x11
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -11,10 +17,10 @@ name = "aSZombienatorCr"
 size = 0x1f
 
 [0x3008]
-last_change = 2023-12-12T19:30:04.862172Z
+last_change = 2023-12-11T18:27:38.840572Z
 addr = 0x3008
-name = "file"
-size = 0x8
+name = "s"
+size = 0x53
 
 [0x3082]
 last_change = 2023-12-11T18:40:43.369511Z
