--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:04.862172Z
-last_push_artifact = 0x3008
+last_push_time = 2023-12-12T19:30:04.878961Z
+last_push_artifact = 0x5e4
 last_push_artifact_type = "global variable"
