--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:04.950102Z
-last_push_artifact = 0x10f0
+last_push_time = 2023-12-12T19:30:04.965923Z
+last_push_artifact = 0x5bc
 last_push_artifact_type = "global variable"
