--- a/global_vars.toml
+++ b/global_vars.toml
@@ -28,8 +28,14 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
+[0x5020]
+last_change = 2023-12-12T19:30:04.559817Z
+addr = 0x5020
+name = "stdin"
+size = 0x1
+
 [0x5040]
-last_change = 2023-12-12T19:30:04.539631Z
+last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
-name = "putchar"
+name = "__errno_location"
 size = 0x1
