--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:04.916739Z
-last_push_artifact = 0x5090
+last_push_time = 2023-12-12T19:30:04.933674Z
+last_push_artifact = 0x3b0
 last_push_artifact_type = "global variable"
