--- a/global_vars.toml
+++ b/global_vars.toml
@@ -11,10 +11,10 @@ name = "aSZombienatorCr"
 size = 0x1f
 
 [0x3008]
-last_change = 2023-12-11T18:27:38.840572Z
+last_change = 2023-12-12T19:30:04.862172Z
 addr = 0x3008
-name = "s"
-size = 0x53
+name = "file"
+size = 0x8
 
 [0x3082]
 last_change = 2023-12-11T18:40:43.369511Z
@@ -32,10 +32,4 @@ size = 0x1
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
-size = 0x1
-
-[0x5078]
-last_change = 2023-12-12T19:30:04.845407Z
-addr = 0x5078
-name = "__libc_start_main"
 size = 0x1
