--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
+[0x318]
+last_change = 2023-12-12T19:30:04.709200Z
+addr = 0x318
+name = "aLib64LdLinuxX8"
+size = 0x1c
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
-
-[0x1160]
-last_change = 2023-12-12T19:30:04.689951Z
-addr = 0x1160
-name = ".setvbuf"
-size = 0x1
 
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
