--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:04.652699Z
-last_push_artifact = 0x1150
+last_push_time = 2023-12-12T19:30:04.671487Z
+last_push_artifact = 0x4fb8
 last_push_artifact_type = "global variable"
