--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.486849Z
-last_push_artifact = 0x50a8
+last_push_time = 2023-12-12T19:30:05.504378Z
+last_push_artifact = 0x1170
 last_push_artifact_type = "global variable"
