--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x63d]
+last_change = 2023-12-12T19:30:05.744844Z
+addr = 0x63d
+name = "aGlibc225"
+size = 0xc
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -32,10 +38,4 @@ size = 0x1
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
-size = 0x1
-
-[0x5088]
-last_change = 2023-12-12T19:30:05.726829Z
-addr = 0x5088
-name = "__isoc99_scanf"
 size = 0x1
