--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.222382Z
-last_push_artifact = 0x1180
+last_push_time = 2023-12-12T19:30:05.238743Z
+last_push_artifact = 0x5a3
 last_push_artifact_type = "global variable"
