--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x5a3]
-last_change = 2023-12-12T19:30:05.238743Z
-addr = 0x5a3
-name = "aExit"
-size = 0x5
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -32,6 +26,12 @@ size = 0x9
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x5010]
+last_change = 2023-12-12T19:30:05.255024Z
+addr = 0x5010
+name = "stdout"
 size = 0x1
 
 [0x5040]
