Updated <GlobalVar: None _ITM_deregisterTMCloneTable_ptr; @20440 len=8>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,17 +22,17 @@ addr = 0x3082
 name = "s"
 size = 0x9
 
-[0x3130]
-last_change = 2023-12-12T19:30:05.270860Z
-addr = 0x3130
-name = "aChallenge"
-size = 0xa
-
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
+
+[0x4fd8]
+last_change = 2023-12-12T19:30:05.287710Z
+addr = 0x4fd8
+name = "_ITM_deregisterTMCloneTable_ptr"
+size = 0x8
 
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
