--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.270860Z
-last_push_artifact = 0x3130
+last_push_time = 2023-12-12T19:30:05.287710Z
+last_push_artifact = 0x4fd8
 last_push_artifact_type = "global variable"
