--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.848656Z
-last_push_artifact = 0x5d8
+last_push_time = 2023-12-12T19:30:05.865220Z
+last_push_artifact = 0x50b0
 last_push_artifact_type = "global variable"
