--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x344]
+last_change = 2023-12-12T19:30:05.537739Z
+addr = 0x344
+name = "aGnu"
+size = 0x4
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -32,10 +38,4 @@ size = 0x1
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
-size = 0x1
-
-[0x5050]
-last_change = 2023-12-12T19:30:05.521272Z
-addr = 0x5050
-name = "puts"
 size = 0x1
