--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x3b8]
-last_change = 2023-12-12T19:30:05.882534Z
-addr = 0x3b8
-name = "elf_gnu_hash_bucket"
-size = 0x1
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -38,4 +32,10 @@ size = 0x1
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
+size = 0x1
+
+[0x50b8]
+last_change = 2023-12-12T19:30:05.900608Z
+addr = 0x50b8
+name = "_ITM_registerTMCloneTable"
 size = 0x1
