--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,12 +4,6 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1190]
-last_change = 2023-12-12T19:30:05.050679Z
-addr = 0x1190
-name = ".strerror"
-size = 0x1
-
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -33,6 +27,12 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
+
+[0x4f70]
+last_change = 2023-12-12T19:30:05.067415Z
+addr = 0x4f70
+name = ""
+size = 0x8
 
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
