--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.935218Z
-last_push_artifact = 0x5060
+last_push_time = 2023-12-12T19:30:05.951970Z
+last_push_artifact = 0x3a4
 last_push_artifact_type = "global variable"
