--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
-[0x3a4]
-last_change = 2023-12-12T19:30:05.951970Z
-addr = 0x3a4
-name = "elf_gnu_hash_symbias"
-size = 0x4
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x1140]
+last_change = 2023-12-12T19:30:05.968727Z
+addr = 0x1140
+name = ".__assert_fail"
+size = 0x1
 
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
