--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:04.982160Z
-last_push_artifact = 0x5048
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:30:04.999128Z
+last_push_artifact = 0x50a0
+last_push_artifact_type = "function"
