--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,7 +1,7 @@
-[0x5a8]
-last_change = 2023-12-12T19:30:05.420969Z
-addr = 0x5a8
-name = "aIsoc99Scanf"
+[0x665]
+last_change = 2023-12-12T19:30:05.437184Z
+addr = 0x665
+name = "aGmonStart"
 size = 0xf
 
 [0x6b4]
