--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
+[0x610]
+last_change = 2023-12-12T19:30:05.637642Z
+addr = 0x610
+name = "aSetvbuf"
+size = 0x8
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
-
-[0x1120]
-last_change = 2023-12-12T19:30:05.620473Z
-addr = 0x1120
-name = ".mmap"
-size = 0x1
 
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
