Updated <GlobalVar: None mmap; @20568 len=1>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,12 +4,6 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1130]
-last_change = 2023-12-12T19:30:05.779381Z
-addr = 0x1130
-name = ".printf"
-size = 0x1
-
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -38,4 +32,10 @@ size = 0x1
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
+size = 0x1
+
+[0x5058]
+last_change = 2023-12-12T19:30:05.796950Z
+addr = 0x5058
+name = "mmap"
 size = 0x1
