Updated <GlobalVar: None __isoc99_scanf; @20616 len=1>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.710250Z
-last_push_artifact = 0x5fa
+last_push_time = 2023-12-12T19:30:05.726829Z
+last_push_artifact = 0x5088
 last_push_artifact_type = "global variable"
