--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x5c4]
-last_change = 2023-12-12T19:30:05.918451Z
-addr = 0x5c4
-name = "aStdin"
-size = 0x6
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -38,4 +32,10 @@ size = 0x1
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
+size = 0x1
+
+[0x5060]
+last_change = 2023-12-12T19:30:05.935218Z
+addr = 0x5060
+name = "printf"
 size = 0x1
