--- a/global_vars.toml
+++ b/global_vars.toml
@@ -28,10 +28,10 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x4fd0]
-last_change = 2023-12-12T19:30:05.321096Z
-addr = 0x4fd0
-name = "strerror_ptr"
+[0x4fe8]
+last_change = 2023-12-12T19:30:05.336616Z
+addr = 0x4fe8
+name = "__gmon_start___ptr"
 size = 0x8
 
 [0x5040]
