--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.321096Z
-last_push_artifact = 0x4fd0
+last_push_time = 2023-12-12T19:30:05.336616Z
+last_push_artifact = 0x4fe8
 last_push_artifact_type = "global variable"
