--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x599]
+last_change = 2023-12-12T19:30:05.083298Z
+addr = 0x599
+name = "aLibcSo6"
+size = 0xa
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -27,12 +33,6 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x4f70]
-last_change = 2023-12-12T19:30:05.067415Z
-addr = 0x4f70
-name = ""
-size = 0x8
 
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
