--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.033442Z
-last_push_artifact = "Elf64_Rela"
-last_push_artifact_type = "struct"
+last_push_time = 2023-12-12T19:30:05.050679Z
+last_push_artifact = 0x1190
+last_push_artifact_type = "global variable"
