--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x599]
-last_change = 2023-12-12T19:30:05.083298Z
-addr = 0x599
-name = "aLibcSo6"
-size = 0xa
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -27,6 +21,12 @@ last_change = 2023-12-11T18:40:43.369511Z
 addr = 0x3082
 name = "s"
 size = 0x9
+
+[0x311a]
+last_change = 2023-12-12T19:30:05.099432Z
+addr = 0x311a
+name = "aWelcomeToS"
+size = 0x14
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
