--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.083298Z
-last_push_artifact = 0x599
+last_push_time = 2023-12-12T19:30:05.099432Z
+last_push_artifact = 0x311a
 last_push_artifact_type = "global variable"
