--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
-[0x63d]
-last_change = 2023-12-12T19:30:05.744844Z
-addr = 0x63d
-name = "aGlibc225"
-size = 0xc
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x1100]
+last_change = 2023-12-12T19:30:05.761973Z
+addr = 0x1100
+name = ".__errno_location"
+size = 0x1
 
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
