--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.744844Z
-last_push_artifact = 0x63d
+last_push_time = 2023-12-12T19:30:05.761973Z
+last_push_artifact = 0x1100
 last_push_artifact_type = "global variable"
