--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,10 +4,10 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1100]
-last_change = 2023-12-12T19:30:05.761973Z
-addr = 0x1100
-name = ".__errno_location"
+[0x1130]
+last_change = 2023-12-12T19:30:05.779381Z
+addr = 0x1130
+name = ".printf"
 size = 0x1
 
 [0x2548]
