--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,6 +22,12 @@ addr = 0x3082
 name = "s"
 size = 0x9
 
+[0x30e0]
+last_change = 2023-12-12T19:30:05.133671Z
+addr = 0x30e0
+name = "aErrorFailedToR"
+size = 0x24
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
