--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.586276Z
-last_push_artifact = 0x1110
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:30:05.603009Z
+last_push_artifact = "Elf64_Vernaux"
+last_push_artifact_type = "struct"
