--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
-[0x621]
-last_change = 2023-12-12T19:30:05.570542Z
-addr = 0x621
-name = "aLibcStartMain"
-size = 0x12
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x1110]
+last_change = 2023-12-12T19:30:05.586276Z
+addr = 0x1110
+name = ".puts"
+size = 0x1
 
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
