--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x5f5]
+last_change = 2023-12-12T19:30:05.692591Z
+addr = 0x5f5
+name = "aRead"
+size = 0x5
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
