Updated <GlobalVar: None aPrintf; @1496 len=7>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.831970Z
-last_push_artifact = 0x5ca
+last_push_time = 2023-12-12T19:30:05.848656Z
+last_push_artifact = 0x5d8
 last_push_artifact_type = "global variable"
