--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,8 +1,8 @@
-[0x5ca]
-last_change = 2023-12-12T19:30:05.831970Z
-addr = 0x5ca
-name = "aAssertFail"
-size = 0xe
+[0x5d8]
+last_change = 2023-12-12T19:30:05.848656Z
+addr = 0x5d8
+name = "aPrintf"
+size = 0x7
 
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
