--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:05.387050Z
-last_push_artifact = 0x5070
+last_push_time = 2023-12-12T19:30:05.404443Z
+last_push_artifact = 0x4f98
 last_push_artifact_type = "global variable"
