Updated <GlobalVar: None function; @12592 len=10>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:06.003320Z
-last_push_artifact = 0x3ac
+last_push_time = 2023-12-12T19:30:06.020536Z
+last_push_artifact = 0x3130
 last_push_artifact_type = "global variable"
