--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,17 +22,17 @@ addr = 0x3082
 name = "s"
 size = 0x9
 
+[0x30b8]
+last_change = 2023-12-12T19:30:06.155055Z
+addr = 0x30b8
+name = "aSendYourPayloa"
+size = 0x26
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x4f78]
-last_change = 2023-12-12T19:30:06.137264Z
-addr = 0x4f78
-name = ""
-size = 0x8
 
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
