--- a/global_vars.toml
+++ b/global_vars.toml
@@ -28,6 +28,12 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
+[0x4d70]
+last_change = 2023-12-12T19:30:06.121016Z
+addr = 0x4d70
+name = ""
+size = 0x8
+
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
