--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:06.104392Z
-last_push_artifact = 0x10e0
-last_push_artifact_type = "function"
+last_push_time = 2023-12-12T19:30:06.121016Z
+last_push_artifact = 0x4d70
+last_push_artifact_type = "global variable"
