--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,17 +16,17 @@ addr = 0x3008
 name = "s"
 size = 0x53
 
+[0x3030]
+last_change = 2023-12-12T19:30:06.617646Z
+addr = 0x3030
+name = "format"
+size = 0x2a
+
 [0x3082]
 last_change = 2023-12-11T18:40:43.369511Z
 addr = 0x3082
 name = "s"
 size = 0x9
-
-[0x3130]
-last_change = 2023-12-12T19:30:06.599311Z
-addr = 0x3130
-name = "function"
-size = 0xa
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
