--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,11 +22,11 @@ addr = 0x3082
 name = "s"
 size = 0x9
 
-[0x30b8]
-last_change = 2023-12-12T19:30:06.155055Z
-addr = 0x30b8
-name = "aSendYourPayloa"
-size = 0x26
+[0x3104]
+last_change = 2023-12-12T19:30:06.172146Z
+addr = 0x3104
+name = "aGoodbye"
+size = 0x9
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
