--- a/functions/00001d82.toml
+++ b/functions/00001d82.toml
@@ -1,4 +1,12 @@
 [metadata]
 addr = 0x1d82
 size = 0x1c6
-last_change = 2023-12-12T19:30:06.899441Z
+last_change = 2023-12-12T19:30:06.916397Z
+
+[stack_vars.-0x10]
+last_change = 2023-12-12T19:30:06.916397Z
+offset = -16
+name = "v8"
+type = "void *"
+size = 0x8
+addr = 0x1d82
