--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x3a8]
-last_change = 2023-12-12T19:30:06.580365Z
-addr = 0x3a8
-name = "elf_gnu_hash_bitmask_nwords"
-size = 0x4
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -27,6 +21,12 @@ last_change = 2023-12-11T18:40:43.369511Z
 addr = 0x3082
 name = "s"
 size = 0x9
+
+[0x3130]
+last_change = 2023-12-12T19:30:06.599311Z
+addr = 0x3130
+name = "function"
+size = 0xa
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
