Updated <Function: @0x1f48 len=0xf0>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:06.933323Z
-last_push_artifact = 0x3060
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:30:06.950873Z
+last_push_artifact = 0x1f48
+last_push_artifact_type = "function"
