Updated <GlobalVar: None __errno_location_ptr; @20360 len=8>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:06.761729Z
-last_push_artifact = 0x4fa8
+last_push_time = 2023-12-12T19:30:06.777716Z
+last_push_artifact = 0x4f88
 last_push_artifact_type = "global variable"
