--- a/global_vars.toml
+++ b/global_vars.toml
@@ -28,10 +28,10 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x4fa8]
-last_change = 2023-12-12T19:30:06.761729Z
-addr = 0x4fa8
-name = "__assert_fail_ptr"
+[0x4f88]
+last_change = 2023-12-12T19:30:06.777716Z
+addr = 0x4f88
+name = "__errno_location_ptr"
 size = 0x8
 
 [0x5040]
