--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:06.319685Z
-last_push_artifact = 0x4f90
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:30:06.335551Z
+last_push_artifact = 0x6e8
+last_push_artifact_type = "comment"
