Updated <GlobalVar: None aMapped0x1000By; @12336 len=42>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,16 +16,16 @@ addr = 0x3008
 name = "s"
 size = 0x53
 
+[0x3030]
+last_change = 2023-12-12T19:30:07.004359Z
+addr = 0x3030
+name = "aMapped0x1000By"
+size = 0x2a
+
 [0x3082]
 last_change = 2023-12-11T18:40:43.369511Z
 addr = 0x3082
 name = "s"
-size = 0x9
-
-[0x310d]
-last_change = 2023-12-12T19:30:06.986948Z
-addr = 0x310d
-name = "aArgc0"
 size = 0x9
 
 [0x4148]
