--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:06.969007Z
-last_push_artifact = 0x1f48
-last_push_artifact_type = "function"
+last_push_time = 2023-12-12T19:30:06.986948Z
+last_push_artifact = 0x310d
+last_push_artifact_type = "global variable"
