Updated <Struct: Elf64_Verneed membs=1 (0x4)>

--- a/structs/Elf64_Vernaux.toml
+++ b/structs/Elf64_Vernaux.toml
@@ -1,7 +1,7 @@
 [metadata]
 name = "Elf64_Vernaux"
-size = 0x8
-last_change = 2023-12-12T19:30:07.056502Z
+size = 0xc
+last_change = 2023-12-10T08:13:30.671399Z
 
 [members.0x0]
 name = "vna_hash"
@@ -12,5 +12,17 @@ size = 0x4
 [members.0x4]
 name = "vna_flags"
 offset = 0x4
-type = ""
+type = "unsigned short"
 size = 0x2
+
+[members.0x6]
+name = "vna_other"
+offset = 0x6
+type = "unsigned short"
+size = 0x2
+
+[members.0x8]
+name = "vna_name"
+offset = 0x8
+type = ""
+size = 0x4
