--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:07.056502Z
-last_push_artifact = "Elf64_Vernaux"
+last_push_time = 2023-12-12T19:30:07.074817Z
+last_push_artifact = "Elf64_Verneed"
 last_push_artifact_type = "struct"
