--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:21.508880Z
-last_push_artifact = 0x403e08
+last_push_time = 2023-12-12T19:59:21.529006Z
+last_push_artifact = 0x400583
 last_push_artifact_type = "global variable"
