Updated <GlobalVar: None elf_gnu_hash_shift; @4195244 len=4>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x404100]
-last_change = 2023-12-12T19:59:21.653580Z
-addr = 0x404100
-name = "setvbuf"
-size = 0x1
+[0x4003ac]
+last_change = 2023-12-12T19:59:21.674590Z
+addr = 0x4003ac
+name = "elf_gnu_hash_shift"
+size = 0x4
