Updated <GlobalVar: None aLibcSo6; @4195705 len=10>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:22.257734Z
-last_push_artifact = 0x4011d0
+last_push_time = 2023-12-12T19:59:22.278461Z
+last_push_artifact = 0x400579
 last_push_artifact_type = "global variable"
