Updated <GlobalVar: None aGnu_0; @4195172 len=4>

--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x403ff0]
-last_change = 2023-12-12T19:59:23.933206Z
-addr = 0x403ff0
-name = "__libc_start_main_ptr"
-size = 0x8
+[0x400364]
+last_change = 2023-12-12T19:59:23.953843Z
+addr = 0x400364
+name = "aGnu_0"
+size = 0x4
