--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:23.933206Z
-last_push_artifact = 0x403ff0
+last_push_time = 2023-12-12T19:59:23.953843Z
+last_push_artifact = 0x400364
 last_push_artifact_type = "global variable"
