--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:23.770359Z
-last_push_artifact = 0x401d88
+last_push_time = 2023-12-12T19:59:23.790719Z
+last_push_artifact = 0x404058
 last_push_artifact_type = "global variable"
